force-app/main/default/objects/Modulo_de_paciente__c/Modulo_de_paciente__c.object-meta.xml
<CustomObject>
    <label>Modulo de paciente</label>
    <nameField>
        <displayFormat>MDP-{0000}</displayFormat>
        <label>Nro de Modulo de paciente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modulos de paciente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>