force-app/main/default/objects/Modulo_de_paciente__c/fields/Ajuste_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Ajuste_Oracle__c</fullName>
    <formula>IF(Modulo__r.Valor_Max_del_Modulo__c != 0,
(CEILING(((Modulo__r.Valor_Max_del_Modulo__c - Valor_autorizado__c)/Modulo__r.Valor_Max_del_Modulo__c)*10000))/10000,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ajuste Oracle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>