force-app/main/default/objects/Modulo_de_paciente__c/fields/Bomba__c.field-meta.xml
<CustomField>
    <fullName>Bomba__c</fullName>
    <label>Bomba</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>