force-app/main/default/objects/Modulo_de_paciente__c/fields/C_digo_postal_paciente__c.field-meta.xml
<CustomField>
    <fullName>C_digo_postal_paciente__c</fullName>
    <formula>Cuenta__r.Codigo_postal_service__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código postal</label>
    <type>Text</type>
</CustomField>