force-app/main/default/objects/Modulo_de_paciente__c/fields/Calle_y_altura__c.field-meta.xml
<CustomField>
    <fullName>Calle_y_altura__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Direccion__c</formula>
    <label>Direcion OS</label>
    <type>Text</type>
</CustomField>