force-app/main/default/objects/Modulo_de_paciente__c/fields/Calle_y_altura_paciente__c.field-meta.xml
<CustomField>
    <fullName>Calle_y_altura_paciente__c</fullName>
    <formula>Cuenta__r.Calle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calle y altura</label>
    <type>Text</type>
</CustomField>