force-app/main/default/objects/Modulo_de_paciente__c/fields/Cantidad_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Producto__c</fullName>
    <label>Cantidad de Producto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>