force-app/main/default/objects/Modulo_de_paciente__c/fields/CO_estimado__c.field-meta.xml
<CustomField>
    <fullName>CO_estimado__c</fullName>
    <label>CO estimado</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>