force-app/main/default/objects/Modulo_de_paciente__c/fields/Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Codigo_postal__c</formula>
    <label>Código postal</label>
    <type>Text</type>
</CustomField>