force-app/main/default/objects/Modulo_de_paciente__c/fields/Condici_n_de_IVA__c.field-meta.xml
<CustomField>
    <fullName>Condici_n_de_IVA__c</fullName>
    <label>Condición de IVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No gravado</fullName>
            </value>
            <value>
                <fullName>Gravado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>