force-app/main/default/objects/Modulo_de_paciente__c/fields/Condicion_IVA_look__c.field-meta.xml
<CustomField>
    <fullName>Condicion_IVA_look__c</fullName>
    <formula>TEXT(Cuenta__r.Condici_n_IVA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condicion IVA</label>
    <type>Text</type>
</CustomField>