force-app/main/default/objects/Modulo_de_paciente__c/fields/Cont_Productos_Activos_Compania__c.field-meta.xml
<CustomField>
    <fullName>Cont_Productos_Activos_Compania__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Productos Activos Compañia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>