force-app/main/default/objects/Modulo_de_paciente__c/fields/Contacto_telefono_OS__c.field-meta.xml
<CustomField>
    <fullName>Contacto_telefono_OS__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacto</label>
    <type>Text</type>
</CustomField>