force-app/main/default/objects/Modulo_de_paciente__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>El módulo solo es válido para pacientes Best Care</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Best Care</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Modulos de paciente (Solo Best Care)</relationshipLabel>
    <relationshipName>Modulos_de_paciente</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>