force-app/main/default/objects/Modulo_de_paciente__c/fields/Datos_del_paciente_confirmados__c.field-meta.xml
<CustomField>
    <fullName>Datos_del_paciente_confirmados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datos del paciente confirmados</label>
    <type>Checkbox</type>
</CustomField>