force-app/main/default/objects/Modulo_de_paciente__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Departamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento</label>
    <type>Text</type>
</CustomField>