force-app/main/default/objects/Modulo_de_paciente__c/fields/Departamento_paciente__c.field-meta.xml
<CustomField>
    <fullName>Departamento_paciente__c</fullName>
    <formula>Cuenta__r.Departamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento</label>
    <type>Text</type>
</CustomField>