force-app/main/default/objects/Modulo_de_paciente__c/fields/Direccion_alternativa__c.field-meta.xml
<CustomField>
    <fullName>Direccion_alternativa__c</fullName>
    <label>Direccion alternativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>