force-app/main/default/objects/Modulo_de_paciente__c/fields/Direccion_Localidad__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Localidad__c</fullName>
    <formula>Cuenta__r.Direccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direccion</label>
    <type>Text</type>
</CustomField>