force-app/main/default/objects/Modulo_de_paciente__c/fields/Duracion_modulo__c.field-meta.xml
<CustomField>
    <fullName>Duracion_modulo__c</fullName>
    <inlineHelpText>En días</inlineHelpText>
    <label>Duracion modulo</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>