force-app/main/default/objects/Modulo_de_paciente__c/fields/Estado_de_pedido__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_pedido__c</fullName>
    <formula>TODAY()&lt;=Modulo_hasta__c</formula>
    <label>Estado de pedido</label>
    <type>Checkbox</type>
</CustomField>