force-app/main/default/objects/Modulo_de_paciente__c/fields/Fecha_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_carga__c</fullName>
    <description>Se completa automáticamente cuando se tilda el campo &quot;Pedido cargado en Oracle&quot;</description>
    <label>Fecha de carga</label>
    <type>Date</type>
</CustomField>