force-app/main/default/objects/Modulo_de_paciente__c/fields/Fecha_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_despacho__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Fecha en la cual le debe llegar el pedido al operador logístico.</inlineHelpText>
    <label>Fecha de despacho</label>
    <type>Date</type>
</CustomField>