force-app/main/default/objects/Modulo_de_paciente__c/fields/Fecha_de_orden_SAP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_orden_SAP__c</fullName>
    <label>Fecha de orden SAP</label>
    <type>Date</type>
</CustomField>