force-app/main/default/objects/Modulo_de_paciente__c/fields/Fecha_Inicio_Producto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Producto__c</fullName>
    <label>Fecha Inicio Producto</label>
    <type>Date</type>
</CustomField>