force-app/main/default/objects/Modulo_de_paciente__c/fields/Formulas__c.field-meta.xml
<CustomField>
    <fullName>Formulas__c</fullName>
    <label>Fórmulas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>