force-app/main/default/objects/Modulo_de_paciente__c/fields/Grupo_OS__c.field-meta.xml
<CustomField>
    <fullName>Grupo_OS__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Grupo_Obra_Social__c</formula>
    <label>Grupo OS</label>
    <type>Text</type>
</CustomField>