force-app/main/default/objects/Modulo_de_paciente__c/fields/Id_de_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Id_de_obra_social__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Id_de_obra_social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id de obra social</label>
    <type>Text</type>
</CustomField>