force-app/main/default/objects/Modulo_de_paciente__c/fields/Id_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Id_de_Paciente__c</fullName>
    <formula>Cuenta__r.ID_de_paciente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id de Paciente</label>
    <type>Text</type>
</CustomField>