force-app/main/default/objects/Modulo_de_paciente__c/fields/KAM__c.field-meta.xml
<CustomField>
    <fullName>KAM__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.KAM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KAM</label>
    <type>Text</type>
</CustomField>