force-app/main/default/objects/Modulo_de_paciente__c/fields/Legacy_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Code__c</fullName>
    <label>Legacy Code</label>
    <length>35</length>
    <type>Text</type>
</CustomField>