force-app/main/default/objects/Modulo_de_paciente__c/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Localidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Localidad</label>
    <type>Text</type>
</CustomField>