force-app/main/default/objects/Modulo_de_paciente__c/fields/Localidad_paciente__c.field-meta.xml
<CustomField>
    <fullName>Localidad_paciente__c</fullName>
    <formula>Cuenta__r.Localidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Localidad</label>
    <type>Text</type>
</CustomField>