force-app/main/default/objects/Modulo_de_paciente__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modulo</label>
    <referenceTo>Modulo__c</referenceTo>
    <relationshipLabel>Modulos de paciente</relationshipLabel>
    <relationshipName>Modulos_de_paciente</relationshipName>
    <type>Lookup</type>
</CustomField>