force-app/main/default/objects/Modulo_de_paciente__c/fields/Modulo_desde__c.field-meta.xml
<CustomField>
    <fullName>Modulo_desde__c</fullName>
    <label>Modulo desde</label>
    <type>Date</type>
</CustomField>