force-app/main/default/objects/Modulo_de_paciente__c/fields/Modulo_hasta__c.field-meta.xml
<CustomField>
    <fullName>Modulo_hasta__c</fullName>
    <label>Modulo hasta</label>
    <type>Date</type>
</CustomField>