force-app/main/default/objects/Modulo_de_paciente__c/fields/Modulo_hasta_autocalculable__c.field-meta.xml
<CustomField>
    <fullName>Modulo_hasta_autocalculable__c</fullName>
    <formula>Modulo_desde__c+ Duracion_modulo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modulo hasta</label>
    <type>Date</type>
</CustomField>