force-app/main/default/objects/Modulo_de_paciente__c/fields/Modulo_lista__c.field-meta.xml
<CustomField>
    <fullName>Modulo_lista__c</fullName>
    <label>Modulo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enteral Advanced</fullName>
            </value>
            <value>
                <fullName>Enteral EstÁNdar</fullName>
            </value>
            <value>
                <fullName>Dieta Cetogenica</fullName>
            </value>
            <value>
                <fullName>Alergia</fullName>
            </value>
            <value>
                <fullName>Metabolicos</fullName>
            </value>
            <value>
                <fullName>Ng Pediatricos</fullName>
            </value>
            <value>
                <fullName>N General</fullName>
            </value>
            <value>
                <fullName>Infusion</fullName>
            </value>
            <value>
                <fullName>Profesionales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>