force-app/main/default/objects/Modulo_de_paciente__c/fields/Modulo_tipo_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Modulo_tipo_de_producto__c</fullName>
    <label>Modulo tipo de producto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>