force-app/main/default/objects/Modulo_de_paciente__c/fields/Modulo_tipo_de_servicio__c.field-meta.xml
<CustomField>
    <fullName>Modulo_tipo_de_servicio__c</fullName>
    <defaultValue>&quot;Autocuidado&quot;</defaultValue>
    <label>Tipo de servicio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>