force-app/main/default/objects/Modulo_de_paciente__c/fields/Motivo_de_no_renovacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_no_renovacion__c</fullName>
    <label>Motivo de no renovación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Renovacion__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fallecimiento</fullName>
            </value>
            <value>
                <fullName>No Pedido</fullName>
            </value>
            <value>
                <fullName>Faltante</fullName>
            </value>
            <value>
                <fullName>Error OC</fullName>
            </value>
            <value>
                <fullName>Rotura</fullName>
            </value>
            <value>
                <fullName>Ausente</fullName>
            </value>
            <value>
                <fullName>Dirección Errónea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>