force-app/main/default/objects/Modulo_de_paciente__c/fields/Municipalidad__c.field-meta.xml
<CustomField>
    <fullName>Municipalidad__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Municipalidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipalidad</label>
    <type>Text</type>
</CustomField>