force-app/main/default/objects/Modulo_de_paciente__c/fields/Municipalidad_paciente__c.field-meta.xml
<CustomField>
    <fullName>Municipalidad_paciente__c</fullName>
    <formula>Cuenta__r.Municipalidad_paciente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipalidad</label>
    <type>Text</type>
</CustomField>