force-app/main/default/objects/Modulo_de_paciente__c/fields/Municipio_objeto_obSocial__c.field-meta.xml
<CustomField>
    <fullName>Municipio_objeto_obSocial__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Localidad_look__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipio</label>
    <type>Text</type>
</CustomField>