force-app/main/default/objects/Modulo_de_paciente__c/fields/Municipio_objeto_paciente__c.field-meta.xml
<CustomField>
    <fullName>Municipio_objeto_paciente__c</fullName>
    <formula>Cuenta__r.Localidad_look__r.Municipio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipio</label>
    <type>Text</type>
</CustomField>