force-app/main/default/objects/Modulo_de_paciente__c/fields/N_de_Material__c.field-meta.xml
<CustomField>
    <fullName>N_de_Material__c</fullName>
    <formula>TEXT(Modulo__r.N_de_Material__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de Material</label>
    <type>Text</type>
</CustomField>