force-app/main/default/objects/Modulo_de_paciente__c/fields/N_SHIP_TO__c.field-meta.xml
<CustomField>
    <fullName>N_SHIP_TO__c</fullName>
    <formula>Cuenta__r.N_SHIP_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° SHIP-TO</label>
    <type>Text</type>
</CustomField>