force-app/main/default/objects/Modulo_de_paciente__c/fields/N_SOLD_TO__c.field-meta.xml
<CustomField>
    <fullName>N_SOLD_TO__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.N_SOLD_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° SOLD-TO</label>
    <type>Text</type>
</CustomField>