force-app/main/default/objects/Modulo_de_paciente__c/fields/Nombre_de_la_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_obra_social__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de la obra social</label>
    <type>Text</type>
</CustomField>