force-app/main/default/objects/Modulo_de_paciente__c/fields/Nombre_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Paciente__c</fullName>
    <formula>Cuenta__r.LastName + &apos; &apos;+ Cuenta__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Paciente</label>
    <type>Text</type>
</CustomField>