force-app/main/default/objects/Modulo_de_paciente__c/fields/Nro_de_autorizacion__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_autorizacion__c</fullName>
    <label>Nro de autorización</label>
    <length>50</length>
    <type>Text</type>
</CustomField>