force-app/main/default/objects/Modulo_de_paciente__c/fields/Nro_de_pedido_de_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_pedido_de_Oracle__c</fullName>
    <label>Nro de pedido de Oracle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>