force-app/main/default/objects/Modulo_de_paciente__c/fields/Numero_de_orden_SAP__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_orden_SAP__c</fullName>
    <label>Numero de orden SAP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>