force-app/main/default/objects/Modulo_de_paciente__c/fields/Obra_Social_Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Obra_Social_Tratamiento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Trae la obra social del tratamiento asociado al modulo</description>
    <inlineHelpText>Este campo se autocompleta con la información del tratamiento.</inlineHelpText>
    <label>Obra Social Tratamiento</label>
    <referenceTo>Tratamiento__c</referenceTo>
    <relationshipLabel>Modulos de paciente</relationshipLabel>
    <relationshipName>Modulos_de_paciente</relationshipName>
    <type>Lookup</type>
</CustomField>