force-app/main/default/objects/Modulo_de_paciente__c/fields/Observacion__c.field-meta.xml
<CustomField>
    <fullName>Observacion__c</fullName>
    <label>Observacion</label>
    <type>TextArea</type>
</CustomField>