force-app/main/default/objects/Modulo_de_paciente__c/fields/Origen_de_la_Urgencia__c.field-meta.xml
<CustomField>
    <fullName>Origen_de_la_Urgencia__c</fullName>
    <label>Origen de la Urgencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado por Obra Social con costo</fullName>
            </value>
            <value>
                <fullName>Solicitado por Obra Social sin costo</fullName>
            </value>
            <value>
                <fullName>Solicitado por Paciente con costo</fullName>
            </value>
            <value>
                <fullName>Solicitado por Paciente sin costo</fullName>
            </value>
            <value>
                <fullName>Error de carga</fullName>
            </value>
            <value>
                <fullName>Error logístico</fullName>
            </value>
            <value>
                <fullName>Error comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>