force-app/main/default/objects/Modulo_de_paciente__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pais</label>
    <type>Text</type>
</CustomField>