force-app/main/default/objects/Modulo_de_paciente__c/fields/Pais_paciente__c.field-meta.xml
<CustomField>
    <fullName>Pais_paciente__c</fullName>
    <formula>Cuenta__r.Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País</label>
    <type>Text</type>
</CustomField>