force-app/main/default/objects/Modulo_de_paciente__c/fields/Pedido_cargado_en_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Pedido_cargado_en_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El responsable de hacer la carga del nuevo pedido en Oracle debe tildar el campo cuando lo haya hecho.</description>
    <label>Pedido cargado en Oracle</label>
    <type>Checkbox</type>
</CustomField>