force-app/main/default/objects/Modulo_de_paciente__c/fields/Pedido_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Oracle__c</fullName>
    <description>Nro de pedido en Oracle cuando se carga el módulo</description>
    <inlineHelpText>Nro de pedido en Oracle cuando se carga el módulo</inlineHelpText>
    <label>Pedido Oracle</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>