force-app/main/default/objects/Modulo_de_paciente__c/fields/Piso_paciente__c.field-meta.xml
<CustomField>
    <fullName>Piso_paciente__c</fullName>
    <formula>Cuenta__r.Piso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Piso</label>
    <type>Text</type>
</CustomField>