force-app/main/default/objects/Modulo_de_paciente__c/fields/Procesamiento_jiterbit__c.field-meta.xml
<CustomField>
    <fullName>Procesamiento_jiterbit__c</fullName>
    <label>Procesamiento Jitterbit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Sin procesar</fullName>
            </value>
            <value>
                <fullName>Procesado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>