force-app/main/default/objects/Modulo_de_paciente__c/fields/Producto_de_m_dulo__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_m_dulo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de módulo</label>
    <referenceTo>Producto_de_modulo__c</referenceTo>
    <relationshipLabel>Modulos de paciente</relationshipLabel>
    <relationshipName>Modulos_de_paciente</relationshipName>
    <type>Lookup</type>
</CustomField>