force-app/main/default/objects/Modulo_de_paciente__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Provincia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>