force-app/main/default/objects/Modulo_de_paciente__c/fields/Provincia_paciente__c.field-meta.xml
<CustomField>
    <fullName>Provincia_paciente__c</fullName>
    <formula>Cuenta__r.Provincia_localidad__c</formula>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>