force-app/main/default/objects/Modulo_de_paciente__c/fields/Referencia_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Cuenta__c</fullName>
    <formula>Cuenta__r.PersonContact.Obra_social__r.Referencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referencia</label>
    <type>Text</type>
</CustomField>