force-app/main/default/objects/Modulo_de_paciente__c/fields/Renovacion__c.field-meta.xml
<CustomField>
    <fullName>Renovacion__c</fullName>
    <label>Renovación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renovacion</fullName>
            </value>
            <value>
                <fullName>alta</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Recupero</fullName>
            </value>
            <value>
                <fullName>Sí</fullName>
                <isActive>false</isActive>
                <label>Sí</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>