force-app/main/default/objects/Modulo_de_paciente__c/fields/Restricci_n_de_horario__c.field-meta.xml
<CustomField>
    <fullName>Restricci_n_de_horario__c</fullName>
    <label>Restricción de horario</label>
    <type>TextArea</type>
</CustomField>