force-app/main/default/objects/Modulo_de_paciente__c/fields/ShipUpdate__c.field-meta.xml
<CustomField>
    <fullName>ShipUpdate__c</fullName>
    <formula>Cuenta__r.N_SHIP_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShipUpdate</label>
    <type>Text</type>
</CustomField>