force-app/main/default/objects/Modulo_de_paciente__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <formula>Cuenta__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefono</label>
    <type>Text</type>
</CustomField>