force-app/main/default/objects/Modulo_de_paciente__c/fields/Tiempo_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_de_creacion__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación</label>
    <type>DateTime</type>
</CustomField>