force-app/main/default/objects/Modulo_de_paciente__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo de servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CUIDADO PERSONALIZADO</fullName>
            </value>
            <value>
                <fullName>CUIDADO COMPLETO</fullName>
            </value>
            <value>
                <fullName>REHABILITACIÓN DEGLUTORIA</fullName>
            </value>
            <value>
                <fullName>REHABILITACIÓN MOTORA PLUS</fullName>
            </value>
            <value>
                <fullName>REHABILITACION MOTORA BASICO ENTERAL</fullName>
            </value>
            <value>
                <fullName>REHABILITACION MOTORA - INTERMEDIO</fullName>
            </value>
            <value>
                <fullName>REHABILITACION MOTORA BASICO ORAL</fullName>
            </value>
            <value>
                <fullName>AUTOCUIDADO.</fullName>
                <default>true</default>
                <label>AUTOCUIDADO.</label>
            </value>
            <value>
                <fullName>CUIDADO BÁSICO</fullName>
            </value>
            <value>
                <fullName>AUTOCUIDADO</fullName>
                <isActive>false</isActive>
                <label>AUTOCUIDADO</label>
            </value>
            <value>
                <fullName>Complejidad media</fullName>
                <isActive>false</isActive>
                <label>Complejidad media</label>
            </value>
            <value>
                <fullName>Con rehabilitacion deglutoria</fullName>
                <isActive>false</isActive>
                <label>Con rehabilitacion deglutoria</label>
            </value>
            <value>
                <fullName>Full</fullName>
                <isActive>false</isActive>
                <label>Full</label>
            </value>
            <value>
                <fullName>Logístico</fullName>
                <isActive>false</isActive>
                <label>Logístico</label>
            </value>
            <value>
                <fullName>REHABILITACIÓN MOTORA CUIDADO COMPLETO</fullName>
                <isActive>false</isActive>
                <label>REHABILITACIÓN MOTORA CUIDADO COMPLETO</label>
            </value>
            <value>
                <fullName>REHABILITACIÓN MOTORA CUIDADO PERSONALIZADA</fullName>
                <isActive>false</isActive>
                <label>REHABILITACIÓN MOTORA CUIDADO PERSONALIZADA</label>
            </value>
            <value>
                <fullName>Recuperacion nutricional (oral)</fullName>
                <isActive>false</isActive>
                <label>Recuperacion nutricional (oral)</label>
            </value>
            <value>
                <fullName>Sin rehabilitacion deglutoria</fullName>
                <isActive>false</isActive>
                <label>Sin rehabilitacion deglutoria</label>
            </value>
            <value>
                <fullName>Solo profesionales</fullName>
                <isActive>false</isActive>
                <label>Solo profesionales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>