force-app/main/default/objects/Modulo_de_paciente__c/fields/Tipo_Renovacion_OS__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Renovacion_OS__c</fullName>
    <formula>text(Cuenta__r.PersonContact.Obra_social__r.Tipo_de_Renovacion__c)</formula>
    <label>Tipo Renovacion OS</label>
    <type>Text</type>
</CustomField>