force-app/main/default/objects/Modulo_de_paciente__c/fields/Valor_autorizado__c.field-meta.xml
<CustomField>
    <fullName>Valor_autorizado__c</fullName>
    <label>Valor autorizado x día</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>